# OpenCV4Android

./: .gitignore  README.md  build_opensc_android.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/andforce/opencv/android/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/andforce/opencv4/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cpp_java_utils.cpp  cpp_java_utils.h  find_objects.cpp  flood_fill.cpp  mat_map_cvt.cpp
app/src/main/cpp/blindmark/: CMakeLists.txt  mat_map_cvt.cpp  mat_map_cvt.h  native-lib.cpp  vector2ArrayList.h
app/src/main/cpp/floodfill/: CMakeLists.txt  find_objects.cpp  flood_fill.cpp  mat_map_cvt.h
app/src/main/cpp/helloopencv/: CMakeLists.txt  hello_opencv.cpp
app/src/main/cpp/yuv/: CMakeLists.txt  vector2ArrayList.cpp  yuv.cpp
app/src/main/java/com/andforce/opencv/android/: AssetsUtils.java  BitmapColorUtils.java  BlindMark.java  BlindMarkActivity.java  FloodFillActivity.java  FloodFillImageView.java  FloodFillUtils.java  MainActivity.java  ResultActivity.java
app/src/main/java/com/andforce/opencv4/: BlindMark.java  FloodFillImageView.java  FloodFillUtils.java  MainActivity.java  ResultActivity.java
app/src/main/res/drawable/: repeat_bg.xml
app/src/main/res/layout/: activity_blind_mark.xml  activity_flood_fill.xml  activity_main.xml  activity_result.xml  result_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/andforce/opencv/android/: ExampleUnitTest.java
app/src/test/java/com/andforce/opencv4/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
